--- a/WindowsTerminal/settings.json
+++ b/WindowsTerminal/settings.json
@@ -1,181 +1,109 @@
 {
+    "$help": "https://aka.ms/terminal-documentation",
     "$schema": "https://aka.ms/terminal-profiles-schema",
-    "alwaysShowTabs": true,
+    "actions": 
+    [
+        {
+            "command": "paste",
+            "keys": "ctrl+v"
+        },
+        {
+            "command": 
+            {
+                "action": "copy",
+                "singleLine": false
+            },
+            "keys": "ctrl+c"
+        },
+        {
+            "command": "find",
+            "keys": "ctrl+shift+f"
+        },
+        {
+            "command": 
+            {
+                "action": "splitPane",
+                "split": "auto",
+                "splitMode": "duplicate"
+            },
+            "keys": "alt+shift+d"
+        }
+    ],
+    "alwaysShowNotificationIcon": false,
     "copyFormatting": "none",
-    "copyOnSelect": true,
-    "defaultProfile": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
-    "initialCols": 150,
+    "copyOnSelect": false,
+    "defaultProfile": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
+    "initialCols": 210,
     "initialRows": 50,
-    // Add any keybinding overrides to this array.
-    // To unbind a default keybinding, set the command to "unbound"
-    "keybindings": [],
-    "showTerminalTitleInTitlebar": true,
-    "startOnUserLogin": true,
     "profiles": 
     {
-        "defaults": {},
+        "defaults": 
+        {
+            "experimental.retroTerminalEffect": false,
+            "startingDirectory": "C:\\src",
+            "useAtlasEngine": false
+        },
         "list": 
         [
             {
-                "acrylicOpacity": 1.0,
-                "closeOnExit": "never",
-                "colorScheme": "Konsolas",
-                "commandline": "powershell.exe",
-                "cursorShape": "bar",
-                "fontFace": "CaskaydiaCove NF",
-                "fontSize": 12,
+                "font": 
+                {
+                    "face": "CaskaydiaCove NF"
+                },
+                "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
+                "hidden": false,
+                "name": "PowerShell Core",
+                "source": "Windows.Terminal.PowershellCore"
+            },
+            {
+                "colorScheme": "Campbell",
+                "font": 
+                {
+                    "face": "CaskaydiaCove NF"
+                },
                 "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
                 "hidden": false,
-                "historySize": 9001,
-                "name": "Powershell",
-                "padding": "0, 0, 0, 0",
-                "snapOnInput": true,
-                "startingDirectory": "C:/src/Cloud",
-                "useAcrylic": false
+                "name": "PowerShell Classic"
             },
             {
-                "acrylicOpacity": 0.84999999999999998,
-                "closeOnExit": "graceful",
-                "colorScheme": "Builtin Solarized Dark",
-                "commandline": "c://Program Files//Yori//yori.exe",
-                "cursorHeight": 25,
-                "cursorShape": "vintage",
-                "fontFace": "Cascadia Code PL",
-                "fontSize": 12,
-                "guid": "{7d04ce37-c00f-43ac-ba47-992cb1393215}",
-                "historySize": 9001,
-                "icon": "c:/consol-512.png",
-                "name": "DOS but not DOS",
-                "padding": "0, 0, 0, 0",
-                "snapOnInput": true,
-                "startingDirectory": "C:/Users/Scott/Desktop",
-                "tabTitle": "DOS, Kinda",
-                "useAcrylic": false
-            },
-            {
-                "closeOnExit": "graceful",
-                "colorScheme": "GitBash",
-                "commandline": "\"%PROGRAMFILES%\\git\\usr\\bin\\bash.exe\" -i -l",
-                "cursorColor": "#FFFFFF",
-                "cursorShape": "bar",
-                "fontFace": "Fira Code",
-                "fontSize": 10,
-                "guid": "{1fdb8320-32c5-11ea-978f-2e728ce88125}",
-                "historySize": 9001,
-                "icon": "%PROGRAMFILES%\\Git\\mingw64\\share\\git\\git-for-windows.ico",
-                "name": "Git Bash",
-                "padding": "0, 0, 0, 0",
-                "snapOnInput": true,
-                "startingDirectory": "%USERPROFILE%"
-            },
-            {
-                "acrylicOpacity": 1.0,
-                "closeOnExit": "never",
-                "colorScheme": "Builtin Solarized Dark",
-                "commandline": "cmd.exe",
-                "cursorHeight": 25,
-                "cursorShape": "vintage",
-                "fontFace": "Cascadia Code",
-                "fontSize": 12,
                 "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
                 "hidden": false,
-                "historySize": 9001,
-                "name": "cmd",
-                "padding": "0, 0, 0, 0",
-                "snapOnInput": true,
-                "startingDirectory": "C:/",
-                "useAcrylic": false
+                "name": "Command Prompt"
             },
             {
-                "acrylicOpacity": 1.0,
-                "closeOnExit": "never",
-                "colorScheme": "UbuntuLegit",
-                "commandline": "wsl.exe -d Ubuntu-18.04",
-                "cursorShape": "bar",
-                "fontFace": "Fira Code",
-                "fontSize": 10,
-                "guid": "{8d04ce37-c00f-43ac-ba47-992cb1393215}",
-                "historySize": 9001,
-                "icon": "c:\\ubuntu-icon.png ",
-                "name": "Ubuntu",
-                "padding": "0, 0, 0, 0",
-                "snapOnInput": true,
-                "startingDirectory": "c:/",
-                "useAcrylic": false
-            },
-            {
-                "acrylicOpacity": 0.84999999999999998,
-                "closeOnExit": "never",
-                "colorScheme": "Ubuntu",
-                "commandline": "c:\\github\\azshell\\azshell.exe",
-                "cursorShape": "bar",
-                "fontFace": "Consolas",
-                "fontSize": 12,
                 "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
                 "hidden": false,
-                "historySize": 9001,
                 "name": "Azure Cloud Shell",
-                "padding": "0, 0, 0, 0",
-                "snapOnInput": true,
-                "source": "Windows.Terminal.Azure",
-                "useAcrylic": false
+                "source": "Windows.Terminal.Azure"
             },
             {
-                "guid": "{c6eaf9f4-32a7-5fdc-b5cf-066e8a4b1e40}",
+                "guid": "{90068415-1aaf-5a46-b191-519738d2ebf6}",
                 "hidden": false,
-                "name": "Ubuntu-18.04",
+                "name": "Developer Command Prompt for VS 2022",
+                "source": "Windows.Terminal.VisualStudio"
+            },
+            {
+                "guid": "{8c238d09-a8fa-5c83-9b6f-db7b3a46bd8f}",
+                "hidden": false,
+                "name": "Developer PowerShell for VS 2022",
+                "source": "Windows.Terminal.VisualStudio"
+            },
+            {
+                "guid": "{16208362-94fc-5b1f-a491-5b2624d5ab56}",
+                "hidden": true,
+                "name": "Visual Studio Debug Console",
+                "source": "VSDebugConsole"
+            },
+            {
+                "guid": "{07b52e3e-de2c-5db4-bd2d-ba144ed6c273}",
+                "hidden": false,
+                "name": "Ubuntu-20.04",
                 "source": "Windows.Terminal.Wsl"
             }
         ]
     },
     "schemes": 
     [
-        {
-            "background": "#2B2B2B",
-            "black": "#000000",
-            "blue": "#6D9CBE",
-            "brightBlack": "#323232",
-            "brightBlue": "#9FCEF0",
-            "brightCyan": "#A0CEF0",
-            "brightGreen": "#83D182",
-            "brightPurple": "#FFFFFF",
-            "brightRed": "#FF7B6B",
-            "brightWhite": "#FFFFFF",
-            "brightYellow": "#FFFF7C",
-            "cursorColor": "#FFFFFF",
-            "cyan": "#6E9CBE",
-            "foreground": "#E6E1DC",
-            "green": "#519F50",
-            "name": "Broadcast",
-            "purple": "#D0D0FF",
-            "red": "#DA4939",
-            "selectionBackground": "#FFFFFF",
-            "white": "#FFFFFF",
-            "yellow": "#FFD24A"
-        },
-        {
-            "background": "#002B36",
-            "black": "#073642",
-            "blue": "#268BD2",
-            "brightBlack": "#002B36",
-            "brightBlue": "#839496",
-            "brightCyan": "#93A1A1",
-            "brightGreen": "#586E75",
-            "brightPurple": "#6C71C4",
-            "brightRed": "#CB4B16",
-            "brightWhite": "#FDF6E3",
-            "brightYellow": "#657B83",
-            "cursorColor": "#FFFFFF",
-            "cyan": "#2AA198",
-            "foreground": "#839496",
-            "green": "#859900",
-            "name": "Builtin Solarized Dark",
-            "purple": "#D33682",
-            "red": "#DC322F",
-            "selectionBackground": "#FFFFFF",
-            "white": "#EEE8D5",
-            "yellow": "#B58900"
-        },
         {
             "background": "#0C0C0C",
             "black": "#0C0C0C",
@@ -221,75 +149,6 @@
             "selectionBackground": "#FFFFFF",
             "white": "#CCCCCC",
             "yellow": "#C19C00"
-        },
-        {
-            "background": "#282C34",
-            "black": "#000000",
-            "blue": "#A9A1E1",
-            "brightBlack": "#000000",
-            "brightBlue": "#A9A1E1",
-            "brightCyan": "#51AFEF",
-            "brightGreen": "#99BB66",
-            "brightPurple": "#C678DD",
-            "brightRed": "#FF6655",
-            "brightWhite": "#BFBFBF",
-            "brightYellow": "#ECBE7B",
-            "cursorColor": "#FFFFFF",
-            "cyan": "#51AFEF",
-            "foreground": "#BBC2CF",
-            "green": "#98BE65",
-            "name": "DoomOne",
-            "purple": "#C678DD",
-            "red": "#FF6C6B",
-            "selectionBackground": "#FFFFFF",
-            "white": "#BBC2CF",
-            "yellow": "#ECBE7B"
-        },
-        {
-            "background": "#000000",
-            "black": "#0C0C0C",
-            "blue": "#6060FF",
-            "brightBlack": "#767676",
-            "brightBlue": "#3B78FF",
-            "brightCyan": "#61D6D6",
-            "brightGreen": "#16C60C",
-            "brightPurple": "#B4009E",
-            "brightRed": "#E74856",
-            "brightWhite": "#F2F2F2",
-            "brightYellow": "#F9F1A5",
-            "cursorColor": "#FFFFFF",
-            "cyan": "#3A96DD",
-            "foreground": "#BFBFBF",
-            "green": "#00A400",
-            "name": "GitBash",
-            "purple": "#BF00BF",
-            "red": "#BF0000",
-            "selectionBackground": "#FFFFFF",
-            "white": "#FFFFFF",
-            "yellow": "#BFBF00"
-        },
-        {
-            "background": "#060606",
-            "black": "#000000",
-            "blue": "#2323A5",
-            "brightBlack": "#7B716E",
-            "brightBlue": "#4B4BFF",
-            "brightCyan": "#69FFFF",
-            "brightGreen": "#5FFF5F",
-            "brightPurple": "#FF54FF",
-            "brightRed": "#FF4141",
-            "brightWhite": "#FFFFFF",
-            "brightYellow": "#FFFF55",
-            "cursorColor": "#FFFFFF",
-            "cyan": "#42B0C8",
-            "foreground": "#C8C1C1",
-            "green": "#18B218",
-            "name": "Konsolas",
-            "purple": "#AD1EDC",
-            "red": "#AA1717",
-            "selectionBackground": "#FFFFFF",
-            "white": "#C8C1C1",
-            "yellow": "#EBAE1F"
         },
         {
             "background": "#282C34",
@@ -430,52 +289,6 @@
             "yellow": "#C4A000"
         },
         {
-            "background": "#2C001E",
-            "black": "#0C0C0C",
-            "blue": "#0037DA",
-            "brightBlack": "#767676",
-            "brightBlue": "#3B78FF",
-            "brightCyan": "#61D6D6",
-            "brightGreen": "#16C60C",
-            "brightPurple": "#B4009E",
-            "brightRed": "#E74856",
-            "brightWhite": "#F2F2F2",
-            "brightYellow": "#F9F1A5",
-            "cursorColor": "#FFFFFF",
-            "cyan": "#3A96DD",
-            "foreground": "#EEEEEC",
-            "green": "#13A10E",
-            "name": "Ubuntu",
-            "purple": "#881798",
-            "red": "#C50F1F",
-            "selectionBackground": "#FFFFFF",
-            "white": "#CCCCCC",
-            "yellow": "#C19C00"
-        },
-        {
-            "background": "#2C001E",
-            "black": "#4E9A06",
-            "blue": "#3465A4",
-            "brightBlack": "#555753",
-            "brightBlue": "#729FCF",
-            "brightCyan": "#34E2E2",
-            "brightGreen": "#8AE234",
-            "brightPurple": "#AD7FA8",
-            "brightRed": "#EF2929",
-            "brightWhite": "#EEEEEE",
-            "brightYellow": "#FCE94F",
-            "cursorColor": "#FFFFFF",
-            "cyan": "#06989A",
-            "foreground": "#EEEEEE",
-            "green": "#300A24",
-            "name": "UbuntuLegit",
-            "purple": "#75507B",
-            "red": "#CC0000",
-            "selectionBackground": "#FFFFFF",
-            "white": "#D3D7CF",
-            "yellow": "#C4A000"
-        },
-        {
             "background": "#000000",
             "black": "#000000",
             "blue": "#000080",
@@ -498,5 +311,8 @@
             "white": "#C0C0C0",
             "yellow": "#808000"
         }
-    ]
+    ],
+    "theme": "system",
+    "themes": [],
+    "useAcrylicInTabRow": false
 }
